<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="wit.bobajob.baj_maxshannon.Register">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:subtitleTextColor="@android:color/black"
                app:title="Register"
                app:titleTextColor="@android:color/white" />

        </android.support.design.widget.AppBarLayout>

        <TextView
            android:id="@+id/userNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="67dp"
            android:text="@string/register_username"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/passwordOne"
            android:layout_alignStart="@+id/passwordOne"
            android:layout_below="@+id/passwordOne"
            android:layout_marginTop="17dp"
            android:text="@string/register_repeatpassword"
            android:textColor="@color/colorPrimary"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/acceptTermsBox"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:width="250dp"
            android:background="@drawable/buttons"
            android:text="@string/register_regbutton"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/email"
            android:layout_alignStart="@+id/email"
            android:layout_below="@+id/email"
            android:layout_marginTop="11dp"
            android:text="@string/register_password"
            android:textColor="@color/colorPrimary"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/email"
            android:layout_alignStart="@+id/email"
            android:layout_below="@+id/userNameIn"
            android:layout_marginTop="15dp"
            android:text="@string/register_useremail"
            android:textColor="@color/colorPrimary"
            android:textStyle="normal|bold" />

        <CheckBox
            android:id="@+id/acceptedNewsLetterBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/register"
            android:layout_alignEnd="@+id/register"
            android:layout_alignRight="@+id/register"
            android:text="@string/register_acceptnewsletters"
            android:textColor="@color/colorPrimary"
            android:textStyle="normal|bold|italic" />

        <CheckBox
            android:id="@+id/acceptTermsBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirmPassword"
            android:layout_marginTop="35dp"
            android:layout_toEndOf="@+id/textView"
            android:layout_toRightOf="@+id/textView"
            android:text="@string/register_tncs"
            android:textColor="@color/colorPrimary"
            android:textStyle="normal|bold|italic" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:background="?attr/colorControlHighlight"
            android:ems="10"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/passwordOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:background="?attr/colorControlHighlight"
            android:ems="10"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/userNameIn"
            android:layout_alignStart="@+id/userNameIn"
            android:layout_below="@+id/textView"
            android:background="?attr/colorControlHighlight"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/userNameIn"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/userNameTv"
            android:layout_alignStart="@+id/userNameTv"
            android:layout_below="@+id/userNameTv"
            android:background="?attr/colorControlHighlight"
            android:ems="10"
            android:inputType="textPersonName"
            android:shadowRadius="10"
            android:textColorLink="@android:color/holo_orange_dark" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/register"
            android:layout_alignStart="@+id/register"
            android:layout_below="@+id/register"
            android:layout_marginTop="34dp"
            android:width="250dp"
            android:text="@string/register_datadisclaimer"
            android:textStyle="normal|italic" />


    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
