<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    tools:context="wit.bobajob.baj_maxshannon.CreateAdAct">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="Create Bobajob"
                app:titleTextColor="@android:color/white" />

        </android.support.design.widget.AppBarLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/appBarLayout"
            android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="15dp"
            android:text="@string/createad_adTitle"
            android:textColor="@color/colorPrimary"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/adTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="?attr/colorControlHighlight"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_below="@+id/textView6"
            android:layout_alignLeft="@+id/textView6"
            android:layout_alignStart="@+id/textView6" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/adTitleText"
            android:layout_alignStart="@+id/adTitleText"
            android:layout_below="@+id/adTitleText"
            android:layout_marginTop="11dp"
            android:text="@string/createad_adCatergory"
            android:textColor="@color/colorPrimary"
            android:textStyle="normal|bold" />

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignEnd="@+id/adTitleText"
            android:layout_alignLeft="@+id/textView7"
            android:layout_alignRight="@+id/adTitleText"
            android:layout_alignStart="@+id/textView7"
            android:layout_below="@+id/textView7"
            android:layout_toStartOf="@+id/adImage"
            android:paddingRight="10dp" />


        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginStart="62dp"
            android:text="@string/createad_adPciture"
            android:textColor="@color/colorPrimary"
            android:textStyle="normal|bold"
            android:layout_alignTop="@+id/phoneNumber"
            android:layout_alignLeft="@+id/adImage"
            android:layout_alignStart="@+id/adImage"
            android:layout_marginTop="34dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createad_adDesc"
            android:textColor="@color/colorPrimary"
            android:textStyle="normal|bold"
            android:layout_below="@+id/categorySpinner"
            android:layout_alignLeft="@+id/categorySpinner"
            android:layout_alignStart="@+id/categorySpinner" />

        <EditText
            android:id="@+id/adDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorControlHighlight"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_below="@+id/textView8"
            android:layout_alignLeft="@+id/categorySpinner"
            android:layout_alignStart="@+id/categorySpinner"
            android:layout_alignRight="@+id/textView9"
            android:layout_alignEnd="@+id/textView9" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView9"
            android:layout_alignLeft="@+id/adDesc"
            android:layout_alignRight="@+id/textView9"
            android:layout_alignStart="@+id/adDesc"
            android:layout_below="@+id/textView5"
            android:background="?attr/colorControlHighlight"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/phoneNumber"
            android:layout_alignStart="@+id/phoneNumber"
            android:layout_below="@+id/adDesc"
            android:text="@string/createad_phoneNumber"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <Button
            android:id="@+id/pictureBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttons"
            android:text="@string/createad_addPictureBtn"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_alignTop="@+id/adImage"
            android:layout_toLeftOf="@+id/adImage"
            android:layout_alignLeft="@+id/phoneNumber"
            android:layout_alignStart="@+id/phoneNumber" />

        <ImageView
            android:id="@+id/adImage"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:background="@android:drawable/picture_frame"
            app:srcCompat="@android:color/background_light"
            android:layout_below="@+id/textView9"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="13dp"
            android:layout_marginEnd="13dp" />

        <Button
            android:id="@+id/createAdBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:background="@drawable/buttons"
            android:text="@string/createad_createAdBtn"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/pictureBtn"
            android:layout_alignStart="@+id/pictureBtn"
            android:layout_alignRight="@+id/adImage"
            android:layout_alignEnd="@+id/adImage" />

    </RelativeLayout>

    <CheckBox
        android:id="@+id/acceptTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/acceptEmail"
        android:layout_alignBottom="@+id/acceptEmail"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:layout_toEndOf="@+id/acceptEmail"
        android:layout_toRightOf="@+id/acceptEmail"
        android:text="@string/createad_acceptTerms"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold|italic" />

    <CheckBox
        android:id="@+id/acceptEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="89dp"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp"
        android:text="@string/createad_acceptEmails"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold|italic"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/acceptTerms"
        android:layout_alignLeft="@+id/acceptEmail"
        android:layout_alignStart="@+id/acceptEmail"
        android:text="Accepting emails allows users to email you."
        android:textStyle="italic" />

</RelativeLayout>
